# dice-sample-dist

./: pyproject.toml
.github/workflows/: python-package.yml
autograder/: Dockerfile
autograder/source/: run_autograder  run_tests.py
dice_sample/: __init__.py  assignment.py  test_assignment.py
